--- a/ARM/Milandr/Eval_1968BE92Q/From Lyonya/Samples/Sample 2.1/_Project/Project.uvprojx
+++ b/ARM/Milandr/Eval_1968BE92Q/From Lyonya/Samples/Sample 2.1/_Project/Project.uvprojx
@@ -338,7 +338,7 @@
               <MiscControls></MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>..\..\Generic;..\User</IncludePath>
+              <IncludePath>C:\git\ARM\Files</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
